objects/Amendments__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent_to_Client__c</fullName>
        <label>Date Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pension_Plan__c</fullName>
        <label>Pension Plan</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Amendments</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Amendment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>